# hw1

./: .all-contributorsrc  .gitignore  CONTRIBUTING.md  LICENSE  README.md  codecov.yml  pyproject.toml
.github/workflows/: poetry-pytest.yml
hw1/: __init__.py
tests/: test_fail_on_specific_py_version.py  test_that_will_fail.py  test_that_will_success.py
